--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ streamlit==1.38.0       # quick UI demo for the trial
 openai==1.47.0          # optional: for the “Carlos, your balance...” LLM message
 gspread==6.1.4          # optional: export plan/forecast to Google Sheets
 oauth2client==4.1.3     # optional: auth support for Google APIs
+streamlit
+openai>=1.40.0
+pydantic>=2.7.0
