--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,72 @@
+# --- Python general ---
 __pycache__/
-*.pyc
-.env
-node_modules/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg
+*.egg-info/
+build/
+dist/
+.eggs/
+*.manifest
+*.spec
+
+# --- Virtual environments ---
+.venv/
+venv/
+env/
+ENV/
+*.env
+*.venv
+
+# --- Streamlit cache ---
+.streamlit/
+.cache/
+*/__pycache__/
+*/.ipynb_checkpoints/
+
+# --- Logs and outputs ---
+*.log
+*.out
+*.tmp
+*.bak
+*.swp
+*.DS_Store
+nohup.out
+
+# --- Jupyter / IPython ---
+.ipynb_checkpoints/
+profile_default/
+ipython_config.py
+
+# --- System / OS ---
+Thumbs.db
 .DS_Store
+.idea/
+.vscode/
+*.code-workspace
+
+# --- Data / exports ---
+*.csv
+*.xlsx
+*.xls
+*.ods
+*.json
+*.pdf
+*.pkl
+
+# --- Google credentials / keys ---
+credentials.json
+service_account.json
+openrouter_key.txt
+.env
+
+# --- Project specific ---
+# ignore generated summaries or plans
+plan_df.csv
+forecast_df.csv
+outputs/
+exports/
+tmp/
+test_data/
