--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-pandas==2.2.2           # CSV loading, joins, and basic transforms
-numpy==1.26.4           # numeric helpers if needed in planning
+# --- Core data handling ---
+pandas==2.2.2              # CSV loading, joins, and transformations
+numpy==1.26.4              # numeric helpers for ML and balances
 python-dateutil==2.9.0.post0  # robust date parsing
-streamlit==1.38.0       # quick UI demo for the trial
-openai==1.47.0          # optional: for the “Carlos, your balance...” LLM message
-gspread==6.1.4          # optional: export plan/forecast to Google Sheets
-oauth2client==4.1.3     # optional: auth support for Google APIs
-streamlit
-openai>=1.40.0
-pydantic>=2.7.0
+
+# --- Machine Learning ---
+scikit-learn==1.5.2        # LinearRegression, RandomForestRegressor, etc.
+
+# --- LLM integration ---
+openai==1.47.0             # OpenAI / OpenRouter LLM API
+pydantic>=2.7.0            # model schemas and data validation
+
+# --- Streamlit UI ---
+streamlit==1.38.0          # Web UI for project demo
+altair==5.3.0              # Data visualization in Streamlit
